# rust-serverless-netlify

./: netlify.toml
netlify/functions/json-response/: Cargo.toml
netlify/functions/json-response/src/: main.rs
