[package]
name = "rust-serverless-netlify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simple_logger = "2.2.0"
serde = { version = "1.0.138", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
serde_json = "1.0.82"
lambda_runtime = "0.5.1"
aws_lambda_events = "0.6.3"
http = "0.2.8"
